--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<h2 class="major"><a href="images\Great Idea Page.html">Great Idea Project</a></h2>
-									<p>This is one of the first projects I worked on. I took raw HTML code and marked it up and styled the CSS to match the given template.</p>
+									<h2 class="major"><a href="https://github.com/AdamHoffma/responsive-web-design-I">Responsive Web Design I</a></h2>
+									<p>Making websites accessible from any device!</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images\fotis-fotopoulos-790373-unsplash.jpg" alt="Computer code and mountain on computer screen" />
@@ -52,11 +52,11 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
-									<h2 class="major">Under Construction</h2>
-									<p>Future Projects coming soon!!</p>
+									<h2 class="major"><a href="https://github.com/AdamHoffma/Sprint-Challenge--User-Interface">User-Interface</a></h2>
+									<p>Gotta be pixel perfect!</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
-									<img src="images\ej-yao-194786-unsplash.jpg" alt="" />
+									<img src="images\john-schnobrich-520019-unsplash.jpg" alt="Person typing on laptop" />
 								</div>
 							</section>
 
@@ -64,7 +64,7 @@
 							<section class="panel">
 								<div class="intro color2">
 									<h2 class="major">Interests</h2>
-									<p>Some things I enjoy</p>
+									<p>Some of the things I enjoy when I'm not coding masterpieces!</p>
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
