added Nasa Photo of Day

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
+										<h2 class="major"><a href="https://nasa-photo-of-the-day.adamhoffman.now.sh/">Nasa's Photo of the Day</a></h2>
+										<p>A fun project that allows you to see Nasa's photo of the day</p>
 									<h2 class="major"><a href="https://github.com/AdamHoffma/responsive-web-design-I">Responsive Web Design I</a></h2>
 									<p>Making websites accessible from any device!</p>
 								</div>
